[project]
name = "aviutl2-catalog-authors-plot"
version = "0.1.0"
description = "Generate an author distribution pie chart from aviutl2-catalog-data."
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pydantic>=2.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
